samples/_failures_safe/1761604986_0f2fd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bced8e0d.c: In function ‘main’:
./samples/SAFE/__tmp_bced8e0d.c:159:5: error: expected expression at end of input
  159 |     int pos =
      |     ^~~
./samples/SAFE/__tmp_bced8e0d.c:159:5: error: expected declaration or statement at end of input
